== 0.3.1 (In Git)

=== New features
* Examples and the associated tables are indented one level deeper than Scenario Outline. (Aslak Hellesøy)

== 0.3.1 2009-04-26

This release has several minor bug fixes and new features. With the addition of Latvian and Hungarian Cucumber
now supports 32(!!) languages.

=== New features
* Support multiline names for Scenarios, Scenario Outlines, Backgrounds, Examples (#231 Joseph Wilk)
* Added #headers to Cucumber::Ast::Table (Ben Mabey)
* New translation for Latvian (Vitauts Stočka)
* New translation for Hungarian (#287 Bence Golda)
* Pick up failure on after hook (#272 Aslak Hellesøy)

=== Bugfixes
* Pretty formatter not colouring Examples tables correctly (#304 Aslak Hellesøy)
* Problem using --scenario and Scenario Outline (#298 Aslak Hellesøy)
* Tag Hook gets executed always there is a background (#301 Aslak Hellesøy)
* Feature which only has a Background with steps causes an exception (#306 Aslak Hellesøy)
* Gem no longer depends on Hoe (Aslak Hellesøy)
* Span html tags appear on HTML results with 0.3.0 (#299 Aslak Hellesøy)
* Fixed incorrect colours in pretty formatter's table headers for outline tables (Aslak Hellesøy)
* Exceptions from steps called within hooks are now reraised. (#294 Ben Mabey)

=== Removed/changed features
* --scenario handle has been removed and replaced with --name which supports partial matches, regexp special characters, running named backgrounds (#295 Joseph Wilk)

== 0.3.0 2009-04-14

This release has some minor changes to the APIs, but big enough that a new major release is in order.
The biggest change is the new semantics of the #World method. Previously you would call this method
several times, passing a Proc and extending the world object of the previous one with a Ruby module.
The problem was that there was no nice way to ensure the order in which these procs were called, which
led to some unexpected situations. In this release you can only register a single World proc. If you