@@ -20,3 +20,13 @@ Feature: search examples
     Examples:
       |state|
       |passing|
+  
+  Scenario Outline: no match in name but in examples
+    Given <state> without a table
+    Examples: Hantu Pisang
+      |state|
+      |passing|
+
+    Examples: Ignore me
+      |state|
+      |failing|
