@@ -2,6 +2,7 @@
 
 === New features
 * Examples and the associated tables are indented one level deeper than Scenario Outline. (Aslak Hellesøy)
+* Added support for Examples selection when using --name. (#295 Joseph Wilk)
 
 == 0.3.1 2009-04-26
 
